@@ -10,7 +10,7 @@ define('SWEANY_PRODUCTION',0x2);
 define('SWEANY_PRODUCTION_FAST_CORE',0x3);
 define('SWEANY_PRODUCTION_DAEMON',0x4);
 require(ROOT.DIRECTORY_SEPARATOR.'usr'.DIRECTORY_SEPARATOR.'config.php');
-if(1 /*TODO: sorry, not yet implemented, will be there in beta1 $GLOBALS['RUNTIME_MODE']==SWEANY_DEVELOPMENT*/){require(ROOT.DIRECTORY_SEPARATOR.'www'.DIRECTORY_SEPARATOR.'index_development.php');exit();}
+if($GLOBALS['RUNTIME_MODE']==SWEANY_DEVELOPMENT || $GLOBALS['RUNTIME_MODE']==SWEANY_PRODUCTION){require(ROOT.DIRECTORY_SEPARATOR.'www'.DIRECTORY_SEPARATOR.'index_development.php');exit();}
 /* FAST CORE MODE STARTS HERE */
 else{
 define('DS',DIRECTORY_SEPARATOR);
